--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>Weatherific</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css"
@@ -14,7 +14,7 @@
     <div
       class="container vh-100 d-flex flex-row justify-content-center align-items-center"
     >
-      <h1 class="text-center mb-4">Weather App</h1>
+      <h1 class="text-center mb-4">Weather-ific!</h1>
       <div class="input-group mb-3 justify-content-center">
         <input
           type="text"
@@ -22,11 +22,11 @@
           class="form-control"
           placeholder="Enter city or zip code"
         />
-        <button class="btn btn-primary" id="searchBtn">Search</button>
+        <button class="btn btn-primary" id="searchBtn">Get Weather</button>
       </div>
       <div id="currentWeather" class="row mb-4 justify-content-center w-100">
         <div class="col-md-6 d-flex align-items-center">
-          <div class="text-center me-3">
+          <div class="text-center me-3" id="cityWeather">
             <h2 id="cityName">City Name</h2>
             <img id="weatherIcon" src="" alt="" />
             <h3 id="temperature">0°F</h3>
@@ -35,7 +35,7 @@
         </div>
       </div>
       <h2 class="text-center mb-3">5-Day Forecast</h2>
-      <div id="forecast" class="row w-100"></div>
+      <div id="forecast"></div>
     </div>
 
     <script src="main.js"></script>
